2004-10-22  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/pencil-context.cpp: Fix bug: undesirable interaction between
	  snapping and snap-to-anchor.

2004-10-21  MenTaLguY  <mental@rydia.net>

	* src/desktop.cpp: SPDesktop::currentRoot() should pull from
	  the current layer hierarchy just like SPDesktop::currentLayer();
	  doubly so, since currently when switching documents the layer hierarchy
	  is updated before the document is switched

	* src/util/Makefile_insert, src/util/copy-list.h: add list copy thingy

	* src/util/list.h: add rest()

	* src/util/reverse-list.h: bug fixes to reverse_list_in_place()

	* src/widgets/layer-selector.cpp, src/widgets/layer-selector.h:
	  more work on layer selector

2004-10-21  Carl Hetherington  <inkscape@carlh.net>

	* src/livarot/Path.cpp, src/livarot/Path.h,
	src/livarot/PathConversion.cpp, src/livarot/PathCutting.cpp,
	src/livarot/PathOutline.cpp, src/livarot/PathSimplify.cpp,
	src/livarot/ShapeMisc.cpp: excise separate path description data
	structure.

	* src/livarot/Path.h, src/livarot/Path.cpp,
	src/livarot/PathConversion.cpp, src/livarot/PathCutting.cpp,
	src/livarot/PathOutline.cpp, src/livarot/PathSimplify.cpp,
	src/livarot/ShapeMisc.cpp, src/livarot/livarot-forward.h: move
	path description structs into their own files, and rename a few
	member variables.

	* src/livarot/Path.h, src/livarot/PathConversion.cpp,
	src/livarot/PathOutline.cpp: remove some unused functions.

2004-10-20  Carl Hetherington  <inkscape@carlh.net>

	* src/livarot/Path.cpp: fix for 1050379, and probably lots of
	others.

	* src/livarot/Path.h, src/livarot/PathOutline.cpp: bug fix for a
	previous commit.

	* src/livarot/Path.cpp: fix a memory leak.

2004-10-19  Carl Hetherington  <inkscape@carlh.net>

	* src/livarot/Path.h, src/livarot/PathSimplify.cpp: more
	simplification cleanups.

	* src/livarot/PathStroke.cpp: coding style cleanups.

	* src/livarot/Path.h, src/livarot/PathSimplify.cpp,